10412
And then you start to see it everywhere, like it's following you:
{code}
scala> (1 to 9).toList match { case List(`_`*) => true }
<console>:8: error: unsupported pattern: Star / p3: List[Int] @ (`_`)* (this is a scalac bug.)
              (1 to 9).toList match { case List(`_`*) => true }
                                                   ^
{code}
